Fixed box alignment

--- a/src/styles/AuthStyles.css
+++ b/src/styles/AuthStyles.css
@@ -1,35 +1,34 @@
 * {
+	margin: auto;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 .container {
+	padding: 1px;
 	width: 400px;
 	height: fit-content;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 150px;
 	border: 1px solid #ccc;
 	border-radius: 10px;
 }
 
 ul {
 	margin: 0;
-	padding: 1px;
-	overflow: hidden;
-	background-color: #fff;
-	border-radius: 10px 10px 0 0;
-}
-
-ul .tabs {
+	padding: 0;
 	width: 100%;
-	display: inline-block;
+	overflow: hidden;
+	border-radius: 8px 7px 0 0;
+	justify-content: space-between;
 }
 
 li {
 	list-style: none;
-	float: left;
+	display: inline-block;
 	border: 1px solid #ccc;
 	height: 40px;
 	font-size: 20px;
-	box-sizing: border-box;
 }
 
 li > a {
@@ -41,17 +40,23 @@ li > a {
 }
 
 .leftTab {
-	border-radius: 10px 0 0 0;
-	margin: auto;
+	border-radius: 9px 0 0 0;
 	width: 50%;
 	display: inline;
 	float: left;
 }
 
 .rightTab {
-	border-radius: 0 10px 0 0;
-	margin: auto;
+	border-radius: 0 9px 0 0;
 	width: 50%;
 	display: inline;
 	float: right;
+}
+
+.tabContent {
+	margin: 0;
+	padding: 5px;
+	min-height: 50px;
+	border: 1px solid #ccc;
+	border-radius: 0 0 9px 9px;
 }
